--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-form-tool",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1-beta",
+  "description": "Yet another form component tool for ember",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,15 +11,15 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/foxnewsnetwork/ember-form-tool",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Thomas Chen",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.3",
+    "ember-cli": "0.2.2",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "0.0.8",
@@ -29,14 +29,18 @@
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
-    "ember-export-application-global": "^1.0.2",
     "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-try": "0.0.4"
+    "ember-export-application-global": "^1.0.2",
+    "ember-try": "0.0.4",
+    "handlebars": "^2.0.0"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "form",
+    "input"
   ],
   "dependencies": {
+    "ember-cli-coffeescript": "0.10.0",
     "ember-cli-babel": "^5.0.0"
   },
   "ember-addon": {
