--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-form-tool",
-  "version": "0.0.3-beta",
+  "version": "0.0.3-beta-1",
   "description": "Yet another form component tool for ember",
   "directories": {
     "doc": "doc",
