--- a/package.json
+++ b/package.json
@@ -19,20 +19,24 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.5",
-    "ember-cli-app-version": "0.3.3",
+    "ember-cli": "1.13.8",
+    "ember-cli-app-version": "0.5.0",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "0.0.8",
-    "ember-cli-htmlbars": "0.7.4",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.10",
-    "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.16.1",
+    "ember-cli-dependency-checker": "^1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
+    "ember-cli-ic-ajax": "0.2.1",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.0.0",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-sri": "^1.0.3",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "1.13.8",
     "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-export-application-global": "^1.0.2",
-    "ember-try": "0.0.4",
-    "handlebars": "^2.0.0"
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.3",
+    "ember-truth-helpers": "1.2.0",
+    "ember-try": "0.0.6",
+    "ember-webcam-input": "0.0.2"
   },
   "keywords": [
     "ember-addon",
@@ -40,9 +44,9 @@
     "input"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.0.0",
-    "ember-cli-coffeescript": "0.11.0",
-    "ember-webcam-input": "0.0.2"
+    "ember-cli-htmlbars": "^1.0.0",
+    "ember-cli-babel": "^5.1.3",
+    "ember-cli-coffeescript": "1.13.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
