--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "input"
   ],
   "dependencies": {
-    "ember-cli-htmlbars": "^1.0.0",
     "ember-cli-babel": "^5.1.3",
-    "ember-cli-coffeescript": "1.13.0"
+    "ember-cli-coffeescript": "1.13.0",
+    "ember-cli-htmlbars": "^1.0.0",
+    "rsvp": "^3.1.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
