--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
   "author": "Thomas Chen",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "1.13.8",
-    "ember-cli-app-version": "0.5.0",
+    "broccoli-asset-rev": "^2.2.0",
+    "ember-cli": "1.13.13",
+    "ember-cli-app-version": "^1.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.0",
-    "ember-cli-release": "0.2.3",
-    "ember-cli-sri": "^1.0.3",
+    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "1.13.8",
+    "ember-code-snippet": "1.1.1",
+    "ember-data": "2.1.0",
     "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
     "ember-truth-helpers": "1.2.0",
-    "ember-try": "0.0.6",
+    "ember-try": "0.0.8",
     "ember-webcam-input": "0.0.2"
   },
   "keywords": [
@@ -44,7 +45,7 @@
     "input"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.3",
+    "ember-cli-babel": "^5.1.5",
     "ember-cli-coffeescript": "1.13.0",
     "ember-cli-htmlbars": "^1.0.0",
     "rsvp": "^3.1.0"
