--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,10 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
-    "webcamjs": "*"
+    "webcamjs": "*",
+    "moment": ">= 2.8.0",
+    "moment-timezone": ">= 0.1.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.14.30"
   },
   "resolutions": {
     "ember": "2.1.0"
