--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-code-snippet": "1.1.1",
+    "ember-cpm": "2.1.2",
     "ember-data": "2.1.0",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-moment": "4.1.0",
     "ember-power-select": "0.6.4",
+    "ember-timezone-input": "foxnewsnetwork/ember-timezone-input#v0.1.3",
     "ember-truth-helpers": "1.2.0",
     "ember-try": "0.0.8",
     "ember-webcam-input": "0.0.2"
