--- a/bower.json
+++ b/bower.json
@@ -1,27 +1,17 @@
 {
   "name": "ember-form-tool",
   "dependencies": {
-    "ember": "2.2.0",
-    "ember-cli-shims": "0.0.6",
-    "ember-cli-test-loader": "0.2.1",
-    "ember-data": "2.1.0",
-    "ember-load-initializers": "0.1.7",
-    "ember-qunit": "0.4.16",
+    "ember": "~2.4.3",
+    "ember-cli-shims": "0.1.1",
+    "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "ember-resolver": "~0.1.20",
-    "jquery": "^1.11.3",
-    "loader.js": "ember-cli/loader.js#3.4.0",
-    "qunit": "~1.20.0",
-    "webcamjs": "*",
-    "moment": ">= 2.8.0",
-    "moment-timezone": ">= 0.1.0",
-    "eonasdan-bootstrap-datetimepicker": "~4.14.30"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37",
+    "moment-timezone": "^0.5.3",
+    "bootstrap": "^3.3.6",
+    "font-awesome": "^4.5.0",
+    "webcamjs": "^1.0.6"
   },
   "resolutions": {
-    "ember": "2.1.0"
-  },
-  "devDependencies": {
-    "bootstrap": "~3.3.5",
-    "font-awesome": "fontawesome#~4.5.0"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.37"
   }
 }
