--- a/package.json
+++ b/package.json
@@ -7,44 +7,49 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "ember server",
     "build": "ember build",
+    "start": "ember server",
     "test": "ember try:testall"
   },
   "repository": "https://github.com/foxnewsnetwork/ember-form-tool",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "Thomas Chen",
+  "author": {
+    "name": "Thomas Chen",
+    "email": "foxnewsnetwork@gmail.com"
+  },
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
+    "broccoli-asset-rev": "^2.4.2",
+    "ember-ajax": "0.7.1",
     "ember-bootstrap-datetimepicker": "1.0.2",
-    "ember-cli": "1.13.13",
+    "ember-cli": "2.4.3",
     "ember-cli-app-version": "^1.0.0",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.1",
-    "ember-cli-github-pages": "0.0.6",
+    "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-github-pages": "0.0.8",
+    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-moment-shim": "0.7.1",
-    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-moment-shim": "1.1.0",
+    "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "^1.2.0",
+    "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-code-snippet": "1.1.1",
+    "ember-code-snippet": "1.2.1",
     "ember-cpm": "2.1.2",
-    "ember-data": "2.1.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-moment": "4.1.0",
-    "ember-power-select": "0.6.4",
-    "ember-timezone-input": "foxnewsnetwork/ember-timezone-input#v0.1.3",
+    "ember-data": "^2.4.2",
+    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-load-initializers": "^0.5.1",
+    "ember-moment": "6.1.0",
+    "ember-power-select": "0.10.0-beta.6",
+    "ember-resolver": "^2.0.3",
+    "ember-timezone-input": "0.1.4",
     "ember-truth-helpers": "1.2.0",
-    "ember-try": "0.0.8",
-    "ember-webcam-input": "0.0.2"
+    "ember-try": "^0.2.2",
+    "ember-webcam-input": "0.1.0",
+    "loader.js": "^4.0.1"
   },
   "keywords": [
     "ember-addon",
@@ -52,12 +57,13 @@
     "input"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.5",
-    "ember-cli-coffeescript": "1.13.0",
-    "ember-cli-htmlbars": "^1.0.0",
-    "rsvp": "^3.1.0"
+    "ember-cli-babel": "^5.1.6",
+    "ember-cli-coffeescript": "^1.13.2",
+    "ember-cli-htmlbars": "^1.0.3",
+    "rsvp": "^3.2.1"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "https://foxnewsnetwork.github.io/ember-form-tool"
   }
 }
